ai-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-backend
  namespace: ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-backend
  template:
    metadata:
      labels:
        app: ai-backend
    spec:
      containers:
        - name: ai-backend
          image: docker.io/naveensasalu/ai-kaayaka-backend:0.1.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 2Gi
