ai-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-backend
  namespace: ai
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  tls:
    - hosts:
        - ai.kaayaka.in
      secretName: ai-tls
  rules:
    - host: ai.kaayaka.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-backend
                port:
                  number: 80
